include exercise for pseudo code

--- a/Content/cross.ipynb
+++ b/Content/cross.ipynb
@@ -144,12 +144,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create the functions below according to `template.py`: \n",
-    "* `cross_real_dumb`\n",
-    "* `cross_real_numba` \n",
-    "* `cross_complex` \n",
-    "    \n",
-    "Create tests for these functions."
+    "1. Create pseudo codes for the real and complex cross products\n",
+    "\n",
+    "2. Create the functions below according to `template.py`: \n",
+    "    * `cross_real_dumb`\n",
+    "    * `cross_real_numba` \n",
+    "    * `cross_complex` \n",
+    "\n",
+    "3. Create tests for these functions."
    ]
   },
   {
