review notebooks and include exercises in the exercises list

--- a/Content/diagonal_matrices_part1.ipynb
+++ b/Content/diagonal_matrices_part1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a $N \\times N$ matrix $\\mathbf{D}$ given by:"
+    "Consider an $N \\times N$ matrix $\\mathbf{D}$ given by:"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This matrix is called **diagonal**. Only the diagonal elements are different from zero. In this case, most of the matrix elements are zero and, consequently, do not need to be stored. Such matrices can be represented by a $N \\times 1$ vector defined as follows:"
+    "This matrix is called **diagonal**. Only the diagonal elements are different from zero. In this case, most of the matrix elements are zero and, consequently, do not need to be stored. Such matrices can be represented by an $N \\times 1$ vector defined as follows:"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $\\mathbf{x}$ be a $N \\times 1$ vector given by:"
+    "Let $\\mathbf{x}$ be an $N \\times 1$ vector given by:"
    ]
   },
   {
@@ -113,6 +113,20 @@
    "source": [
     "    for j = 0:N-1\n",
     "        E[:,j] = d[j]*B[:,j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By using the pseudo-codes defined in the notebooks [`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-vector.ipynb) and [`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-matrix.ipynb), deduce the pseudo-codes shown above for computing $\\mathbf{D}\\mathbf{x}$, $\\mathbf{D}\\mathbf{B}$ and $\\mathbf{B}\\mathbf{D}$."
    ]
   },
   {
