--- a/Content/flops.ipynb
+++ b/Content/flops.ipynb
@@ -41,7 +41,7 @@
     "collapsed": true
    },
    "source": [
-    "### Exercise (extra)"
+    "### Exercise"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Dot product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
+    "**1) Dot product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
     "\\mathbf{x}^{\\top}\\mathbf{y} = x_{0} \\, y_{0} + x_{1} \\, y_{1} + \\cdots + x_{N-1} \\, y_{N-1} \\: .\n",
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Hadamard (or eletrywise) product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
+    "**2) Hadamard (or eletrywise) product of two $N \\times 1$ vectors $\\mathbf{x}$ and $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
     "\\mathbf{x} \\circ \\mathbf{y} = \n",
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Outer product of an $N \\times 1$ vector $\\mathbf{x}$ and an $M \\times 1$ vector $\\mathbf{y}$**\n",
+    "**3) Outer product of an $N \\times 1$ vector $\\mathbf{x}$ and an $M \\times 1$ vector $\\mathbf{y}$**\n",
     "\n",
     "$$\n",
     "\\mathbf{x} \\otimes \\mathbf{y}^{\\top} = \n",
@@ -95,29 +95,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times 1$ vector $\\mathbf{x}$**\n",
+    "**4) Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times 1$ vector $\\mathbf{x}$**\n",
     "\n",
     "Determine the total number of flops required for computing the resulting vector (hit: use the dot product formulation).\n",
     "\n",
-    "In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$ with real elements. What is the total number of flops associated with each one?"
+    "In the notebook ([`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-vector.ipynb)), we have learned three different ways of computing the product $\\mathbf{A} \\mathbf{x}$ with real elements. What is the total number of flops associated with each one?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times L$ matrix $\\mathbf{B}$**\n",
+    "**5) Product of an $N \\times M$ matrix $\\mathbf{A}$ and an $M \\times L$ matrix $\\mathbf{B}$**\n",
     "\n",
     "Determine the total number of flops required for computing the resulting matrix.\n",
     "\n",
-    "In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$ with real elements. What is the total number of flops associated with each one?"
+    "In the notebook ([`matrix-matrix.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-matrix.ipynb)), we have learned five different algorithms for computing the product $\\mathbf{A} \\mathbf{B}$ with real elements. What is the total number of flops associated with each one?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Product $\\mathbf{A}\\mathbf{B}\\mathbf{C}$ , where $\\mathbf{A}$ is an $N \\times M$ matrix, $\\mathbf{B}$ is an $M \\times L$ matrix and $\\mathbf{C}$ is an $L \\times P$ matrix**"
+    "**6) Product $\\mathbf{A}\\mathbf{B}\\mathbf{C}$ , where $\\mathbf{A}$ is an $N \\times M$ matrix, $\\mathbf{B}$ is an $M \\times L$ matrix and $\\mathbf{C}$ is an $L \\times P$ matrix**"
    ]
   },
   {
