--- a/Content/triangular_matrices_part1.ipynb
+++ b/Content/triangular_matrices_part1.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using the notebook [`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/master/Content/matrix-vector.ipynb), it can be shown that the product $\\mathbf{y} = \\mathbf{U} \\mathbf{x}$ can be calculated by following different algorithms:"
+    "By using the notebook [`matrix-vector.ipynb`](https://nbviewer.jupyter.org/github/birocoles/Disciplina-metodos-computacionais/blob/main/Content/matrix-vector.ipynb), it can be shown that the product $\\mathbf{y} = \\mathbf{U} \\mathbf{x}$ can be calculated by following different algorithms:"
    ]
   },
   {
@@ -203,14 +203,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that some of the algorithms presented above include the terms associated with null elements of the triangular matrices and other algorithms do not include these null elements."
+    "Note that some of the algorithms presented above access the null elements of the triangular matrices and other algorithms do not access the null elements."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise (extra)\n",
+    "### Exercise 1\n",
     "\n",
     "What is the total number of flops associated with each algorithm presented above?"
    ]
@@ -219,22 +219,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create four functions called `matvec_triu_prod3`, `matvec_triu_prod5`, `matvec_tril_prod8` and `matvec_tril_prod10` to implement the algorithms 3, 5, 8, and 10, respectively. Each algorithm must receive the triangular matrix $\\mathbf{U}$ or $\\mathbf{L}$ and the vector $\\mathbf{x}$ and return the resultant vector $\\mathbf{y}$ or $\\mathbf{z}$, according to the text presented above. The cells below show how to create the matrices $\\mathbf{U}$ and $\\mathbf{L}$.\n",
-    "2. In your `test_my_functions.py` file, create two tests. The first test must compare the results produced by the functions `matvec_triu_prod3` and `matvec_triu_prod5` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html). The second test must compare the results produced by the functions `matvec_tril_prod8` and `matvec_tril_prod10` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html)"
+    "1. In your `my_functions.py` file, create four functions called `matvec_triu_prod3`, `matvec_triu_prod5`, `matvec_tril_prod8` and `matvec_tril_prod10` to implement the algorithms 3, 5, 8, and 10, respectively. Each algorithm must receive the triangular matrix $\\mathbf{U}$ or $\\mathbf{L}$ and the vector $\\mathbf{x}$ and return the resultant vector $\\mathbf{y}$ or $\\mathbf{z}$, according to the text presented above. The cells below show how to create triangular matrices $\\mathbf{U}$ and $\\mathbf{L}$ from full matrices.\n",
+    "2. In your `test_my_functions.py` file, create at least two tests. The first test must compare the results produced by the functions `matvec_triu_prod3` and `matvec_triu_prod5` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html). The second test must compare the results produced by the functions `matvec_tril_prod8` and `matvec_tril_prod10` with the result produced by the routine [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### How to create triangular matrices"
+    "#### How to create triangular matrices from full matrices?"
    ]
   },
   {
