--- a/Content/triangular_matrices_part2.ipynb
+++ b/Content/triangular_matrices_part2.ipynb
@@ -131,16 +131,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise"
+    "### Exercise (optional)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_functions.py` file, create a function called `matvec_triu_opt_prod` to implement the product between the triangular matrix $\\mathbf{U}$ and a vector $\\mathbf{x}$. Your function must receive the vector $\\mathbf{u}$ and the vector $\\mathbf{x}$ and return the resulting vector $\\mathbf{y} = \\mathbf{Ux}$. Notice that $\\mathbf{u}$ must contain the $N(N+1)/2$ elements forming the rows of $\\mathbf{U}$.\n",
+    "1. In your `my_functions.py` file, create a function called `matvec_triu_opt_prod` to implement the product between the triangular matrix $\\mathbf{U}$ and a vector $\\mathbf{x}$. Your function must receive the vector $\\mathbf{u}$ and the vector $\\mathbf{x}$ and return the resulting vector $\\mathbf{y} = \\mathbf{Ux}$. Notice that $\\mathbf{u}$ must contain the $N(N+1)/2$ non-null elements forming the rows of $\\mathbf{U}$.\n",
     "2. In your `test_my_functions.py` file, create one test for comparing the result produced by `matvec_triu_opt_prod` and that produced by your function `matvec_triu_prod3`.\n",
-    "3. In your `my_functions.py` file, create a function called `matvec_tril_opt_prod` to implement the product between the triangular matrix $\\mathbf{L}$ and a vector $\\mathbf{x}$. Your function must receive the vector $\\mathbf{l}$ and the vector $\\mathbf{x}$ and return the resulting vector $\\mathbf{y} = \\mathbf{Lx}$. Notice that $\\mathbf{l}$ must contain the $N(N+1)/2$ elements forming the rows of $\\mathbf{L}$.\n",
+    "3. In your `my_functions.py` file, create a function called `matvec_tril_opt_prod` to implement the product between the triangular matrix $\\mathbf{L}$ and a vector $\\mathbf{x}$. Your function must receive the vector $\\mathbf{l}$ and the vector $\\mathbf{x}$ and return the resulting vector $\\mathbf{y} = \\mathbf{Lx}$. Notice that $\\mathbf{l}$ must contain the $N(N+1)/2$ non-null elements forming the rows of $\\mathbf{L}$.\n",
     "4. In your `test_my_functions.py` file, create one test for comparing the result produced by `matvec_tril_opt_prod` and that produced by your function `matvec_tril_prod8`."
    ]
   },
