example of the discrete Fourier transform for N = 6

--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -278,7 +278,7 @@
     "\n",
     "$$\n",
     "G_{n} \\equiv \\sum \\limits_{k = 0}^{N-1} \n",
-    "g_{k} \\, e^{\\, -i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad , \\tag{45}\n",
+    "g_{k} \\, w_{N}^{\\, n \\, k \\,} \\quad , \\tag{45}\n",
     "$$"
    ]
   },
@@ -286,7 +286,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $G(f_{n}) \\approx \\Delta y \\, G_{n}$ (Press et al., 2007, p. 607)."
+    "where $G(f_{n}) \\approx \\Delta y \\, G_{n}$ (Press et al., 2007, p. 607) and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq46'></a>\n",
+    "\n",
+    "$$\n",
+    "w_{N} = e^{-i \\, 2 \\, \\pi \\, / \\, N} \\quad . \\tag{46}\n",
+    "$$"
    ]
   },
   {
@@ -300,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq46a'></a>\n",
+    "<a id='eq47'></a>\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -310,8 +321,10 @@
     "G(f_{n}) \\, e^{\\, i \\, 2 \\, \\pi \\, \\left( \\frac{n}{N \\Delta y} \\right) \\, \\left( k \\, \\Delta y\\right)} \n",
     "\\frac{1}{N \\Delta y} \\\\\n",
     "&\\approx \\frac{1}{N} \\, \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
-    "\\frac{G(f_{n})}{\\Delta y} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N}\n",
-    "\\end{split} \\quad . \\tag{46a}\n",
+    "\\frac{G(f_{n})}{\\Delta y} \\, e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\\\\n",
+    "&\\approx \\frac{1}{N} \\, \\sum \\limits_{n = -\\frac{N}{2}}^{\\frac{N}{2} - 1} \n",
+    "G_{n} \\, \\tilde{w}_{N}^{\\, n \\, k \\,}\n",
+    "\\end{split} \\quad , \\tag{47}\n",
     "$$"
    ]
   },
@@ -319,54 +332,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In equations [43](#eq43)-[46](#eq46), $n$ varies from $−\\frac{N}{2}$ to $\\frac{N}{2}-1$. Let's take a look in the example below, with $N = 4$. In this case, $n = -2, -1, 0, 1$ and $k = 0, 1, 2, 3$. For convenience, consider the new variables:"
+    "where $\\tilde{w}_{N}$ denotes the [complex conjugate](https://en.wikipedia.org/wiki/Complex_conjugate) of $w_{N}$ ([equation 46](#eq46))."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq47a'></a>\n",
-    "\n",
-    "$$\n",
-    "w^{nk}_{N} = e^{\\, -i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\tag{47a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq47b'></a>\n",
-    "\n",
-    "$$\n",
-    "\\tilde{w}^{nk}_{N} = e^{\\, i \\, 2 \\, \\pi \\, n \\, k \\, \\mathbin{/} \\, N} \\quad , \\tag{47b}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where \" $\\tilde{}$ \" denotes the [complex conjugate](https://en.wikipedia.org/wiki/Complex_conjugate) and"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq47c'></a>\n",
-    "\n",
-    "$$\n",
-    "w_{N} = e^{-i \\, 2 \\, \\pi \\, / \\, N} \\quad . \\tag{47c}\n",
-    "$$"
+    "In equations [43](#eq43)-[46](#eq46), $n$ varies from $−\\frac{N}{2}$ to $\\frac{N}{2}-1$. Let's take a look in the example below, with $N = 4$. In this case, $n = -2, -1, 0, 1$ and $k = 0, 1, 2, 3$."
    ]
   },
   {
@@ -545,6 +518,13 @@
    "metadata": {},
    "source": [
     "Notice that, to compute the Discrete Inverse Fourier Transform ([equation 50](#eq50)), it is necessary to multiply by the scale factor $1 / N$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a look at the supplementary file `fourier_1D_4_example.pdf` to see an example for $N = 6$."
    ]
   },
   {
