illustrate DFT matrix and FFT with scipy

--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -528,6 +528,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='sec2.4'></a>\n",
+    "### Scipy DFT matrix ([`scipy.linalg.dft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.dft.html))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -539,11 +547,279 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the DFT matrix by using different scale factors\n",
+    "FN_unscaled = dft(N, scale=None)\n",
+    "FN_sqrtn = dft(N, scale='sqrtn')\n",
+    "FN_n = dft(N, scale='n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# All these DFT matrices are symmetric\n",
+    "np.allclose(FN_unscaled, FN_unscaled.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(FN_sqrtn, FN_sqrtn.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(FN_n, FN_n.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identity matrix\n",
+    "I = np.identity(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Conjugate of the unscaled DFT matrix\n",
+    "FN_unscaled_ast = np.conj(FN_unscaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The conjugate of the unscaled DFT matrix is also symmetric\n",
+    "# Note that FN_unscaled_ast.T is the conjugate transpose of the unscaled DFT matrix\n",
+    "np.allclose(FN_unscaled_ast, FN_unscaled_ast.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the inverse of the unscaled DFT matrix\n",
+    "np.allclose(np.dot(FN_unscaled, (1/N)*FN_unscaled_ast), I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the inverse of the sqrtn-scaled DFT matrix\n",
+    "np.allclose(np.dot(FN_sqrtn, (1/np.sqrt(N))*FN_unscaled_ast), I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Define the inverse of the n-scaled DFT matrix\n",
+    "np.allclose(np.dot(FN_n, FN_unscaled_ast), I)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='sec2.5'></a>\n",
+    "### Scipy FFT ([`scipy.fft.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.fft.html))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Unscaled DFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{g} \\xrightarrow[]{1} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} \\xleftarrow[\\frac{1}{N}]{} \\mathbf{G}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $\\sqrt{N}$-scaled DFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{\\sqrt{N}}} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} \\xleftarrow[\\frac{1}{\\sqrt{N}}]{} \\mathbf{G}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $N$-scaled DFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{g} \\xrightarrow[]{\\frac{1}{N}} \\mathbf{G} \\\\\n",
+    "\\mathbf{g} \\xleftarrow[1]{} \\mathbf{G}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.fft import fft, ifft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate synthetic data\n",
+    "g = np.random.rand(N)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "N=10"
+    "# Compute the Fourier transform by using different scale factors\n",
+    "G_unscaled = np.dot(FN_unscaled, g)\n",
+    "G_sqrtn = np.dot(FN_sqrtn, g)\n",
+    "G_n = np.dot(FN_n, g)"
    ]
   },
   {
@@ -552,7 +828,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FN = dft(N, scale=None)"
+    "# Compute the DFT with Scipy\n",
+    "G_unscaled_sp = fft(x=g, norm='backward')\n",
+    "G_sqrtn_sp = fft(x=g, norm='ortho')\n",
+    "G_n_sp = fft(x=g, norm='forward')"
    ]
   },
   {
@@ -572,7 +851,7 @@
     }
    ],
    "source": [
-    "np.allclose(np.conj(FN), np.conj(FN).T)"
+    "np.allclose(G_unscaled, G_unscaled_sp)"
    ]
   },
   {
@@ -592,31 +871,13 @@
     }
    ],
    "source": [
-    "np.allclose(FN, FN.T)"
+    "np.allclose(G_sqrtn, G_sqrtn_sp)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "FN_inv = np.conj(FN)/N"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FN_inv_FN = np.dot(FN_inv, FN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -624,62 +885,13 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(FN_inv_FN, np.identity(N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FN_FN_inv = np.dot(FN, FN_inv)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(FN_FN_inv, np.identity(N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.allclose(np.dot(FN, np.conj(FN)), N*np.identity(N))"
+    "np.allclose(G_n, G_n_sp)"
    ]
   },
   {
