--- a/Content/fourier_1D_4.ipynb
+++ b/Content/fourier_1D_4.ipynb
@@ -917,21 +917,51 @@
     "collapsed": true
    },
    "source": [
-    "<a id='exercise'></a>\n",
+    "<a id='ex1'></a>\n",
     "\n",
-    "## Exercise"
+    "### Exercise 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. In your `my_function.py` file, create a function called `DFT_matrix`. The function must receive the positive integer $N$ and a string called `scale` representing the scale factor $s$. This string may assume three possible values: `None`, `'n'` or `'sqrtn'`. Your function must define the scale factor $s$ based on the string `scale`. Hint: the DFT matrix and can be defined by using `outer(n, n)`, where `n` is a vector with elements varying from `0` to `N-1`.\n",
-    "2. In your file `test_my_function.py`, create three tests for the function `DFT_matrix`. One test must compare the result produced by `DFT_matrix` and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`scipy.linalg.dft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.dft.html). The last test must verify that $\\mathbf{F}_{N}$ satisfy the following conditions: $\\mathbf{F}_{N}^{\\ast} = \\mathbf{F}_{N}^{H}$, $\\mathbf{F}_{N}^{-1} = \\frac{1}{N} \\, \\mathbf{F}_{N}^{\\ast}$ and $N \\mathbf{I} = \\mathbf{F}_{N}^{H} \\mathbf{F}_{N}$.\n",
-    "3. In your `my_function.py` file, create a function called `fft1D`. The function must receive the data vector $\\mathbf{g}$ and return its Discrete Fourier Transform. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`).\n",
-    "4. In your file `test_my_function.py`, create one test for the function `fft1D`. This test must compare the result produced by `fft1D` and the result produced by the routine [`scipy.fftpack.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.fft.html#scipy.fftpack.fft).\n",
-    "5. In your `my_function.py` file, create a function called `ifft1D`. The function must receive the complex vector $\\mathbf{G}$ and return its Discrete Inverse Fourier Transform. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex` (see the notebook `block_matrix.ipynb`). Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conjugate(A).T`.\n",
-    "6. In your file `test_my_function.py`, create one test for the function `ifft1D`. This test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fftpack.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fftpack.ifft.html)."
+    "1. In your functions file, create a function called `DFT_matrix`. The function must receive the positive integer $N$ and a string called `scale` representing the scale factor $s$. This string may assume three possible values: `None`, `'n'` or `'sqrtn'`. Your function must define the scale factor $s$ based on the string `scale`. Hint: the DFT matrix and can be defined by using `outer(n, n)`, where `n` is a vector with elements varying from `0` to `N-1`.\n",
+    "2. In your test file, create three tests for the function `DFT_matrix`. One test must compare the result produced by `DFT_matrix` and an expected result produced by a specific input. The other test must compare the result produced by your function and the result produced by the routine [`scipy.linalg.dft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.linalg.dft.html). The last test must verify that $\\mathbf{F}_{N}$ satisfy the following conditions: $\\mathbf{F}_{N}^{\\ast} = \\mathbf{F}_{N}^{H}$, $\\mathbf{F}_{N}^{-1} = \\frac{1}{N} \\, \\mathbf{F}_{N}^{\\ast}$ and $N \\mathbf{I} = \\mathbf{F}_{N}^{H} \\mathbf{F}_{N}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ex2'></a>\n",
+    "\n",
+    "### Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. In your functions file, create a function called `fft1D`. The function must receive the data vector $\\mathbf{g}$ and the string `scale` representing the scale factor $s$ (the same defined for your function `DFT_matrix`). Your function `fft1D` must return the Discrete Fourier Transform of $\\mathbf{g}$. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex`.\n",
+    "4. In your test file, create one test for the function `fft1D`. This test must compare the result produced by `fft1D` and the result produced by the routine [`scipy.fft.fft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.fft.html) by using the three possible scale factors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ex3'></a>\n",
+    "\n",
+    "### Exercise 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. In your functions file, create a function called `ifft1D`. The function must receive a complex vector $\\mathbf{G}$ and the string `scale` representing the scale factor $s$ (the same defined for your functions `DFT_matrix` and `fft1D`). Your function `ifft1D` must return the Inverse Discrete Fourier Transform of $\\mathbf{G}$. This function must create the DFT matrix $\\mathbf{F}_{N}$ ([equation 47](#eq47)) by using your function `DFT_matrix` and must compute the matrix-vector product by using your function `matvec_complex`. Hint: given a complex numpy array 2D `A`, its conjugate transpose is given by `np.conj(A).T`.\n",
+    "6. In your test file, create two tests for the function `ifft1D`. The first test must compare the result produced by `ifft1D` and the result produced by the routine [`scipy.fft.ifft`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.fft.ifft.html). The second test must create a real data vector $\\mathbf{g}$, compute its DFT $\\mathbf{G}$ with your function `fft1D` and then compare the computed the IDFT of $\\mathbf{G}$ with the original vector $\\mathbf{g}$ by using your function `ifft1D`."
    ]
   },
   {
